# hal-simplicity

./: .gitignore  Cargo-old.toml  Cargo.toml  README.md  pyproject.toml
hal_simplicity/: Cargo.toml
hal_simplicity/src/: address.rs  confidential.rs  hal_simplicity.rs  lib.rs  tx.rs
hal_simplicity/src/cmd/: address.rs  block.rs  keypair.rs  mod.rs  tx.rs
hal_simplicity/src/cmd/simplicity/: info.rs  mod.rs  sighash.rs
hal_simplicity_app/: Cargo.toml
hal_simplicity_app/src/: main.rs
hal_simplicity_py/: Cargo.toml  pyproject.toml
hal_simplicity_py/src/: lib.rs
src-old/: block.rs  lib.rs
tests_old/: cli.rs
