[tool.poetry]
name = "hal-simplicity"
version = "0.1.0"
description = "Python bindings and CLI for hal-simplicity via PyO3"
authors = ["anonym <anonym@example.com>"]
packages = [{ include = "hal_simplicity" }]

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^1.7"  
poethepoet = "^0.37.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0"


[tool.poe.tasks.build-wheel]
shell = """
cargo build &&
maturin build --manifest-path hal_simplicity_py/Cargo.toml &&
poetry run pip install --force-reinstall "$(ls -t target/wheels/hal_simplicity_py*.whl | head -n 1)"
"""


[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"
