[package]
name = "hal_simplicity"
version = "0.1.0"
edition = "2024"


[lib]
path = "src/lib.rs"

[dependencies]
hal = "0.10.0"
clap = "2.32"
log = "0.4.5"
fern = "0.5.6"

serde = { version = "1.0.84", features = ["derive"] }
serde_json = "1.0.34"
serde_yaml = "0.8.8"
hex = "0.3.2"

elements = { version = "0.25.2", features = ["serde"] }
simplicity = { package = "simplicity-lang", version = "0.5.0", features = ["base64", "serde"] }



