[package]
name = "hal_simplicity_app"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "hal-simplicity"
path = "src/main.rs"

[dependencies]
hal = "0.10.0"
clap = "2.32"
log = "0.4.5"
fern = "0.5.6"

hal_simplicity = { path = "../hal_simplicity" }
elements = { version = "0.25.2", features = ["serde"] }
